--- a/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
+++ b/ExcelAddInEquipmentDatabase/app.Rel_VCG.config
@@ -28,7 +28,7 @@
         <value xdt:Transform="Replace">https:\\gensvw1178.gen.volvocars.net</value>
       </setting>
       <setting name="TemplateBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
-        <value xdt:Transform="Replace">\\GENSVW1178.gen.volvocars.net\gensvw1178_D\IIS\EqUiWebUi\Resources\VSTO\TEMPLATES</value>
+        <value xdt:Transform="Replace">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\VCG</value>
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
