--- a/ExcelAddInEquipmentDatabase/app.config
+++ b/ExcelAddInEquipmentDatabase/app.config
@@ -13,7 +13,7 @@
   <connectionStrings>
     <add name="EQUIConnectionString" connectionString="Data Source=GNL1004ZCBQC2\SQLEXPRESS;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient" />
 
-    <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=GNL1004ZCBQC2\SQLEXPRESS;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin;&quot;" 
+    <add name="EquiEntities" connectionString="metadata=res://*/EquiModel.csdl|res://*/EquiModel.ssdl|res://*/EquiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=GNL1004ZCBQC2\SQLEXPRESS;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin;&quot;"
          providerName="System.Data.EntityClient" />
   </connectionStrings>
 
@@ -66,21 +66,21 @@
 
   <applicationSettings>
     <ExcelAddInEquipmentDatabase.Properties.Settings>
-      <setting name="Helpfile" serializeAs="String">
-        <value>https:\\sway.com\csCS9cdjEpcpPhw0?ref=Link</value>
-      </setting>
-      <setting name="EquiBasepath" serializeAs="String">
-        <value>http:\\gensvw1178.gen.volvocars.net</value>
-      </setting>
-      <setting name="TemplateBasepath" serializeAs="String">
-        <value>\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\Templates</value>
-      </setting>
-      <setting name="TemplateShema" serializeAs="String">
-        <value>Equi</value>
-      </setting>
-      <setting name="SiteName" serializeAs="String">
-        <value>debug</value>
-      </setting>
+        <setting name="Helpfile" serializeAs="String">
+            <value>https:\\sway.com\csCS9cdjEpcpPhw0?ref=Link</value>
+        </setting>
+        <setting name="TemplateShema" serializeAs="String">
+            <value>Equi</value>
+        </setting>
+        <setting name="SiteName" serializeAs="String">
+            <value>debug</value>
+        </setting>
+        <setting name="EquiBasepath" serializeAs="String">
+            <value>https:\\gensvw1178.gen.volvocars.net</value>
+        </setting>
+        <setting name="TemplateBasepath" serializeAs="String">
+            <value>\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\VCCH</value>
+        </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
 </configuration>
