--- a/ExcelAddInEquipmentDatabase/Properties/Settings.settings
+++ b/ExcelAddInEquipmentDatabase/Properties/Settings.settings
@@ -5,17 +5,17 @@
     <Setting Name="Helpfile" Type="System.String" Scope="Application">
       <Value Profile="(Default)">https:\\sway.com\csCS9cdjEpcpPhw0?ref=Link</Value>
     </Setting>
-    <Setting Name="EquiBasepath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http:\\gensvw1178.gen.volvocars.net</Value>
-    </Setting>
-    <Setting Name="TemplateBasepath" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\DEPLOYMENTBASE\Templates</Value>
-    </Setting>
     <Setting Name="TemplateShema" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Equi</Value>
     </Setting>
     <Setting Name="SiteName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">debug</Value>
+    </Setting>
+    <Setting Name="EquiBasepath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">https:\\gensvw1178.gen.volvocars.net</Value>
+    </Setting>
+    <Setting Name="TemplateBasepath" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\VCCH</Value>
     </Setting>
   </Settings>
 </SettingsFile>
