--- a/ExcelAddInEquipmentDatabase/app.Rel_VCH.config
+++ b/ExcelAddInEquipmentDatabase/app.Rel_VCH.config
@@ -27,7 +27,7 @@
         <value xdt:Transform="Replace">https:\\chasvw1203.cha.volvocars.net</value>
       </setting>
       <setting name="TemplateBasepath" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
-        <value xdt:Transform="Replace">\\Chasvw1203.cha.volvocars.net\chasvw1203_e\IIS\EqUiWebUi\Resources\VSTO\TEMPLATES</value>
+        <value xdt:Transform="Replace">\\gnlsnm0101.gen.volvocars.net\PROJ\6308-SHR-VCC22700\VSTO\VCCH</value>
       </setting>
     </ExcelAddInEquipmentDatabase.Properties.Settings>
   </applicationSettings>
