--- a/UlExportTool/Properties/Settings.settings
+++ b/UlExportTool/Properties/Settings.settings
@@ -2,11 +2,11 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="UlExportTool.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="LocalUlDB" Type="System.String" Scope="User">
-      <Value Profile="(Default)">C:\\USLT\\ULtraLog\\Ultralog.mdb</Value>
-    </Setting>
     <Setting Name="HideConsole" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="LocalUlDB" Type="System.String" Scope="User">
+      <Value Profile="(Default)">C:\USLT\Ultralog\Ultralog.mdb</Value>
     </Setting>
   </Settings>
 </SettingsFile>
