--- a/UlExportTool/app.config
+++ b/UlExportTool/app.config
@@ -10,7 +10,7 @@
   
   <connectionStrings>
     <!--this is the MAIN connection string for EQUI (site specific)-->
-    <add name="EQUIConnectionString" connectionString="Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient"/>
+    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
   
