--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -185,6 +185,7 @@
     <Folder Include="Areas\STW040\Models\" />
     <Folder Include="Areas\STW040\Views\Shared\" />
     <Folder Include="Areas\Supervision\Views\Shared\" />
+    <Folder Include="Areas\UltraLog\Views\Shared\" />
     <Folder Include="Areas\VASC\Views\Shared\" />
     <Folder Include="Areas\VCSC\Controllers\" />
     <Folder Include="Areas\VCSC\Models\" />
@@ -424,6 +425,22 @@
     </Compile>
     <Compile Include="Areas\Tiplife\TiplifeAreaRegistration.cs" />
     <Compile Include="Areas\Tiplife\TiplifeHelpers.cs" />
+    <Compile Include="Areas\UltraLog\Models\UltraLogModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UltraLogModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\UltraLog\Models\UltraLogModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UltraLogModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\UltraLog\Models\UltraLogModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>UltraLogModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Areas\UltraLog\UltraLogAreaRegistration.cs" />
     <Compile Include="Areas\user_management\Controllers\AreaFiltersController.cs" />
     <Compile Include="Areas\user_management\Controllers\c_ownershipController.cs" />
     <Compile Include="Areas\user_management\Controllers\userController.cs" />
@@ -690,7 +707,7 @@
     <Compile Include="Areas\Welding\Controllers\TeardownTeam.cs" />
     <Compile Include="Areas\Welding\Controllers\DMLControllers\ToDoListsController.cs" />
     <Compile Include="Areas\Welding\Controllers\DMLControllers\ToDoList_RemarkController.cs" />
-    <Compile Include="Areas\Welding\Controllers\UltralogController.cs" />
+    <Compile Include="Areas\UltraLog\Controllers\ControlPlanController.cs" />
     <Compile Include="Areas\Welding\Controllers\UpdateController.cs" />
     <Compile Include="Areas\Welding\Controllers\WMController.cs" />
     <Compile Include="Areas\Welding\Controllers\DMLControllers\InspectionplansController.cs" />
@@ -889,7 +906,7 @@
     <Compile Include="Areas\Welding\Models\Users.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="Areas\Welding\Models\UltralogData.cs" />
+    <Compile Include="Areas\UltraLog\Models\UltralogData.cs" />
     <Compile Include="Areas\Welding\Models\WeldingGun.cs">
       <DependentUpon>WeldingModel.tt</DependentUpon>
     </Compile>
@@ -1055,6 +1072,16 @@
       <DependentUpon>TiplifeModel.edmx</DependentUpon>
       <LastGenOutput>TiplifeModel.cs</LastGenOutput>
     </Content>
+    <Content Include="Areas\UltraLog\Models\UltraLogModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>UltraLogModel.edmx</DependentUpon>
+      <LastGenOutput>UltraLogModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Areas\UltraLog\Models\UltraLogModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>UltraLogModel.edmx</DependentUpon>
+      <LastGenOutput>UltraLogModel.cs</LastGenOutput>
+    </Content>
     <Content Include="Areas\user_management\Models\user_management.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>user_management.edmx</DependentUpon>
@@ -1104,12 +1131,9 @@
     <Content Include="Content\fontawesome-all.css" />
     <Content Include="Content\images\deuropeningLinksV316.png" />
     <Content Include="Content\images\volvo-50.png" />
-
     <Content Include="Content\images\vooruitkaderLinks.PNG" />
-
     <Content Include="Content\images\volvo-BE.png" />
     <Content Include="Content\images\Volvo-USA.png" />
-
     <Content Include="Content\jquery-cron.css" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\MvcGrid\mvc-grid.css" />
@@ -2823,10 +2847,10 @@
     <Content Include="Areas\Welding\Views\StoringsIngave\Edit.cshtml" />
     <Content Include="Areas\Welding\Views\StoringsIngave\Index.cshtml" />
     <Content Include="Areas\CycleTime\Views\CycleTimeUi\Index.cshtml" />
-    <Content Include="Areas\Welding\Views\Ultralog\GetControlPlanPicture.cshtml" />
-    <Content Include="Areas\Welding\Views\Ultralog\GetControlPlan.cshtml" />
-    <Content Include="Areas\Welding\Views\Ultralog\_GetControlPlanPicture.cshtml" />
-    <Content Include="Areas\Welding\Views\Ultralog\ListControlPlans.cshtml" />
+    <Content Include="Areas\UltraLog\Views\ControlPlan\GetControlPlanPicture.cshtml" />
+    <Content Include="Areas\UltraLog\Views\ControlPlan\GetControlPlan.cshtml" />
+    <Content Include="Areas\UltraLog\Views\ControlPlan\_GetControlPlanPicture.cshtml" />
+    <Content Include="Areas\UltraLog\Views\ControlPlan\ListControlPlans.cshtml" />
     <Content Include="Areas\Tiplife\Views\Electrode\WeldgunTool.cshtml" />
     <Content Include="node_modules\bootstrap-select\.github\ISSUE_TEMPLATE.md" />
     <Content Include="node_modules\bootstrap-select\.github\move.yml" />
@@ -2997,6 +3021,15 @@
     <Content Include="node_modules\powerbi-router\README.md" />
     <Content Include="Content\images\USA.xcf" />
     <Content Include="Content\images\BE.xcf" />
+    <Content Include="Areas\UltraLog\Views\web.config" />
+    <Content Include="Areas\UltraLog\Views\_ViewStart.cshtml" />
+    <EntityDeploy Include="Areas\UltraLog\Models\UltraLogModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>UltraLogModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Areas\UltraLog\Models\UltraLogModel.edmx.diagram">
+      <DependentUpon>UltraLogModel.edmx</DependentUpon>
+    </Content>
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
