--- a/EqUiWebUi/Web.config
+++ b/EqUiWebUi/Web.config
@@ -24,29 +24,31 @@
       providerName="System.Data.SqlClient" />
   -->
   <connectionStrings>
-    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;Integrated Security = true"
+    <add name="EQUIConnectionString" connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Persist Security Info=True;Integrated Security = true"
       providerName="System.Data.SqlClient" />
-    <add name="GADATAEntitiesUserManagement" connectionString="metadata=res://*/Areas.user_management.Models.user_management.csdl|res://*/Areas.user_management.Models.user_management.ssdl|res://*/Areas.user_management.Models.user_management.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
+    <add name="GADATAEntitiesUserManagement" connectionString="metadata=res://*/Areas.user_management.Models.user_management.csdl|res://*/Areas.user_management.Models.user_management.ssdl|res://*/Areas.user_management.Models.user_management.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATAEntities1" connectionString="metadata=res://*/Areas.PlcSupervisie.Models.Gadata.csdl|res://*/Areas.PlcSupervisie.Models.Gadata.ssdl|res://*/Areas.PlcSupervisie.Models.Gadata.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
+    <add name="GADATAEntities1" connectionString="metadata=res://*/Areas.PlcSupervisie.Models.Gadata.csdl|res://*/Areas.PlcSupervisie.Models.Gadata.ssdl|res://*/Areas.PlcSupervisie.Models.Gadata.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATA_AlertModel" connectionString="metadata=res://*/Areas.Alert.Models.AlertModel.csdl|res://*/Areas.Alert.Models.AlertModel.ssdl|res://*/Areas.Alert.Models.AlertModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=GADATA_AlertModel&quot;"
+    <add name="GADATA_AlertModel" connectionString="metadata=res://*/Areas.Alert.Models.AlertModel.csdl|res://*/Areas.Alert.Models.AlertModel.ssdl|res://*/Areas.Alert.Models.AlertModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=GADATA_AlertModel&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATAEntitiesTiplife" connectionString="metadata=res://*/Areas.Tiplife.Models.TiplifeModel.csdl|res://*/Areas.Tiplife.Models.TiplifeModel.ssdl|res://*/Areas.Tiplife.Models.TiplifeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=GADATAEntitiesTiplife&quot;"
+    <add name="GADATAEntitiesTiplife" connectionString="metadata=res://*/Areas.Tiplife.Models.TiplifeModel.csdl|res://*/Areas.Tiplife.Models.TiplifeModel.ssdl|res://*/Areas.Tiplife.Models.TiplifeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=GADATAEntitiesTiplife&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATAEntitiesVASC" connectionString="metadata=res://*/Areas.VASC.Models.VASC.csdl|res://*/Areas.VASC.Models.VASC.ssdl|res://*/Areas.VASC.Models.VASC.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=GADATAEntitiesVASC&quot;"
+    <add name="GADATAEntitiesVASC" connectionString="metadata=res://*/Areas.VASC.Models.VASC.csdl|res://*/Areas.VASC.Models.VASC.ssdl|res://*/Areas.VASC.Models.VASC.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=GADATAEntitiesVASC&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATAEntitiesPJV" connectionString="metadata=res://*/Areas.PJV.Models.PJV.csdl|res://*/Areas.PJV.Models.PJV.ssdl|res://*/Areas.PJV.Models.PJV.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
+    <add name="GADATAEntitiesPJV" connectionString="metadata=res://*/Areas.PJV.Models.PJV.csdl|res://*/Areas.PJV.Models.PJV.ssdl|res://*/Areas.PJV.Models.PJV.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="BackupClientUI" connectionString="metadata=res://*/Areas.BackupClientUI.Models.BackupClientUIModel.csdl|res://*/Areas.BackupClientUI.Models.BackupClientUIModel.ssdl|res://*/Areas.BackupClientUI.Models.BackupClientUIModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
+    <add name="BackupClientUI" connectionString="metadata=res://*/Areas.BackupClientUI.Models.BackupClientUIModel.csdl|res://*/Areas.BackupClientUI.Models.BackupClientUIModel.ssdl|res://*/Areas.BackupClientUI.Models.BackupClientUIModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATAEntitiesWelding" connectionString="metadata=res://*/Areas.Welding.Models.WeldingModel.csdl|res://*/Areas.Welding.Models.WeldingModel.ssdl|res://*/Areas.Welding.Models.WeldingModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
+    <add name="GADATAEntitiesWelding" connectionString="metadata=res://*/Areas.Welding.Models.WeldingModel.csdl|res://*/Areas.Welding.Models.WeldingModel.ssdl|res://*/Areas.Welding.Models.WeldingModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATAEntitiesEQUI" connectionString="metadata=res://*/Models.EQUIModel.csdl|res://*/Models.EQUIModel.ssdl|res://*/Models.EQUIModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
+    <add name="GADATAEntitiesEQUI" connectionString="metadata=res://*/Models.EQUIModel.csdl|res://*/Models.EQUIModel.ssdl|res://*/Models.EQUIModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="GADATAEntitiesVWSC" connectionString="metadata=res://*/Areas.VWSC.Models.VWSC.csdl|res://*/Areas.VWSC.Models.VWSC.ssdl|res://*/Areas.VWSC.Models.VWSC.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;Persist Security Info=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
+    <add name="GADATAEntitiesVWSC" connectionString="metadata=res://*/Areas.VWSC.Models.VWSC.csdl|res://*/Areas.VWSC.Models.VWSC.ssdl|res://*/Areas.VWSC.Models.VWSC.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;Persist Security Info=True;MultipleActiveResultSets=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
-    <add name="SupervisionEntities" connectionString="metadata=res://*/Areas.Supervision.Models.SupervisionModel.csdl|res://*/Areas.Supervision.Models.SupervisionModel.ssdl|res://*/Areas.Supervision.Models.SupervisionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;Application Name=EntityFramework&quot;"
+    <add name="SupervisionEntities" connectionString="metadata=res://*/Areas.Supervision.Models.SupervisionModel.csdl|res://*/Areas.Supervision.Models.SupervisionModel.ssdl|res://*/Areas.Supervision.Models.SupervisionModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;Application Name=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="UltraLogEntities" connectionString="metadata=res://*/Areas.UltraLog.Models.UltraLogModel.csdl|res://*/Areas.UltraLog.Models.UltraLogModel.ssdl|res://*/Areas.UltraLog.Models.UltraLogModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATAdev;Integrated Security=True;Persist Security Info=False;Pooling=False;MultipleActiveResultSets=False;Connect Timeout=60;Encrypt=False;TrustServerCertificate=True;Application Name=EntityFramework&quot;"
       providerName="System.Data.EntityClient" />
   </connectionStrings>
   <!--App settings-->
@@ -57,7 +59,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <!--global site settings-->
     <add key="SiteName" value="**defaultSiteName**" />
-    <add key="DisabledAreas" value="Welding" />
+    <add key="DisabledAreas" value="" />
     <add key="DatabufferNumShifts" value="9" />
     <add key="DatabufferNumDefaultHours" value="48" />
     <!--hangfire-->
@@ -67,10 +69,10 @@
     <add key="HangfireDetailsBasepath" value="http://equi/hangfire/jobs/details/" />
     <!--Maximo  MOVE THIS TO MAXIMO AREA WEB.CONFIG!-->
     <add key="Maximo_ORGID" value="VCCBE" />
-    <add key="Maximo_SiteID" value="VCCH" />
-    <add key="Maximo_LOCATION_SYSTEMID" value="PRIMARY" />
+    <add key="Maximo_SiteID" value="VCG" />
+    <add key="Maximo_LOCATION_SYSTEMID" value="PRODMID" />
     <add key="Maximo_ORG_SYSTEMID" value="ORG" />
-    <add key="Maximo_TOPANCESTOR" value="VCCH" />
+    <add key="Maximo_TOPANCESTOR" value="VCG" />
   </appSettings>
   <!--Web settings-->
   <system.web>
@@ -79,7 +81,7 @@
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.5.1" />
     <!--authorization-->
-    <authentication mode="Windows"/>
+    <authentication mode="Windows" />
     <authorization>
       <allow users="*" />
     </authorization>
