--- a/EqUiWebUi/EqUiWebUi.csproj
+++ b/EqUiWebUi/EqUiWebUi.csproj
@@ -3049,6 +3049,7 @@
     <Content Include="Areas\UltraLog\Views\Ultralog\_CompletedPlansGrid.cshtml" />
     <Content Include="Areas\UltraLog\Views\Ultralog\_measurementRemarksGird.cshtml" />
     <Content Include="Areas\UltraLog\Views\Ultralog\_measurementRemarks.cshtml" />
+    <Content Include="Areas\UltraLog\Views\Ultralog\Index.cshtml" />
     <None Include="Properties\PublishProfiles\chasvw1203_DEV_VCCH.pubxml" />
     <None Include="Properties\PublishProfiles\chasvw1203_PRODUCTION_VCCH.pubxml" />
     <Content Include="Areas\Welding\Views\WM\_Parameters.cshtml" />
