--- a/UlExportTool/app.config
+++ b/UlExportTool/app.config
@@ -17,7 +17,7 @@
   <userSettings>
     <UlExportTool.Properties.Settings>
       <setting name="HideConsole" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="LocalUlDB" serializeAs="String">
         <value>C:\USLT\Ultralog\Ultralog.mdb</value>
