--- a/EqUiWebUi/Web.DEV_VCCH.config
+++ b/EqUiWebUi/Web.DEV_VCCH.config
@@ -5,7 +5,7 @@
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
   <connectionStrings>
     <add name="EQUIConnectionString"
-      connectionString="Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATAdev;Persist Security Info=True;Integrated Security = true"
+      connectionString="Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATA;Persist Security Info=True;Integrated Security = true"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
 
@@ -37,18 +37,4 @@ DEPP-->
     </appender>
   </log4net>
 
-  <system.web>
-    <compilation xdt:Transform="RemoveAttributes(debug)" />
-    <!--
-      In the example below, the "Replace" transform will replace the entire 
-      <customErrors> section of your web.config file.
-      Note that because there is only one customErrors section under the 
-      <system.web> node, there is no need to use the "xdt:Locator" attribute.
-      
-      <customErrors defaultRedirect="GenericError.htm"
-        mode="RemoteOnly" xdt:Transform="Replace">
-        <error statusCode="500" redirect="InternalError.htm"/>
-      </customErrors>
-    -->
-  </system.web>
 </configuration>
