System tray in his own threath SHIT SLOVED

--- a/UlExportTool/app.Rel_VCG.config
+++ b/UlExportTool/app.Rel_VCG.config
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+\\GENSVW1178.gen.volvocars.net\gensvw1178_D\IIS\EqUiWebUi\UltralogExportTool\
+https://gensvw1178.gen.volvocars.net/UltralogExportTool/
+-->
+
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
   <!--connection strings transforms-->
@@ -8,5 +13,14 @@
      connectionString="Data Source=sqla001.gen.volvocars.net;Initial Catalog=GADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
+
+  <!--app settings-->
+  <userSettings>
+    <UlExportTool.Properties.Settings>
+      <setting name="LocalUlDB" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
+        <value xdt:Transform="Replace">C:\USLT\Ultralog\Ultralog.mdb</value>
+      </setting>
+    </UlExportTool.Properties.Settings>
+  </userSettings>
 
 </configuration>
