--- a/UlExportTool/app.Rel_VCCH.config
+++ b/UlExportTool/app.Rel_VCCH.config
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
+<!--
+\\Chasvw1203.cha.volvocars.net\chasvw1203_e\IIS\EqUiWebUi\UltralogExportTool\
+https://Chasvw1203.cha.volvocars.net/UltralogExportTool/
+-->
+
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
   <!--connection strings transforms-->
@@ -8,5 +13,16 @@
      connectionString="Data Source=CHASVW1203.cha.volvocars.net\DBSQLTIPWEP;Initial Catalog=CHADATA;Persist Security Info=True;User ID=EqUiAdmin;Password=EqUiAdmin"
       xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
   </connectionStrings>
+
+
+  <!--app settings-->
+  <userSettings>
+    <UlExportTool.Properties.Settings>
+      <setting name="LocalUlDB" serializeAs="String" xdt:Transform="Replace" xdt:Locator="Match(name)">
+        <value xdt:Transform="Replace">C:\USLT\Ultralog\Ultralog.accdb</value>
+      </setting>
+    </UlExportTool.Properties.Settings>
+  </userSettings>
   
+ 
 </configuration>
